_sass/styles.scss
// Import Core Clean Blog SCSS
@import "../assets/vendor/startbootstrap-clean-blog/scss/styles.scss";

// Initial Dark mode support

@media (prefers-color-scheme: dark) {
   
  body {
    color:white;
    background-color: #131518;
    
    .masthead {
      background-color: #040404;
    }
    
    a {
      color: white;
    }
    .post-preview {
      >a {
          color: white;
      }
    }
    blockquote {
      color: #879099;
    }
    .clap-count {
      .flat {
        fill: #131518;
      }
  }
  .fa-inverse {
    color: #131518;
  }
    }  
  
// Welcomments CSS
   .welcomments__comments-title,
   .welcomments__author-name,
   .welcomments__comment-message a,
    .welcomments__comment-form label {
        color: white !important;
    }
    .welcomments__comment-time a time,
    .welcomments__comment-form p {
        color: #9ca3af !important;
    }
    .welcomments__comment-message {
        color: #d1d5db !important;
    }
    .welcomments__comment-reply-link,
    .welcomments__comment-form textarea,
    .welcomments__comment-form input {
        background-color: #20252d  !important;
    }
    .welcomments__submit-button {
        background-color: #2f4059 !important;
    }
    .welcomments__comment {
        border-color: #334052 !important;
    }
    .welcomments__comment-form textarea,
    .welcomments__comment-form input {
        border-color: #334052 !important;
    }
    
}
@media (prefers-color-scheme: light) {
  body {
    .masthead{
      background-color: #ffffff;
      .overlay{
        opacity: 0.5;
      }
    }
  }
    .welcomments__submit-button {
        background-color: $primary !important;
    }

}

// applause-button

applause-button {
    width: 60px;
    height: 60px;
    margin: 5% auto 0 auto;
  
    .count-container {
      color: inherit;
    }
}

.clap-count {
    @extend h2;
    color: $primary;
    display: none;
  
    svg {
      height: 1em;
      vertical-align: middle;
      width: 1em;
    }
  
    .flat {
      fill: white;
    }
  
    .outline {
      fill: $primary;
    }
  }

// Branding Typography  
.navbar-brand {
  font-family: "Iceberg";
  font-weight: 800;
}
.page-heading {
  h1 {
    font-family: "Iceberg";
    font-weight: 800;
  }
}
  

// Welcomments likes styling

#like-button-container {
  width: 6rem;
  height: 3rem;
}
#like-button-container .subtitle {
  color: #4b5563;
  text-align: center;
  font-size: 0.75rem;
  font-weight: 500;
  font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial,
    sans-serif, Apple Color Emoji, Segoe UI Emoji;
}
#welcomments__like-button {
  color: #111827;
  text-align: center;
  font-weight: 700;
  cursor: pointer;
  font-size: 1rem;
  user-select: none;
  font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial,
    sans-serif, Apple Color Emoji, Segoe UI Emoji;
}
@media screen and (min-width: 832px) {
  #like-button-container {
    position: fixed;
    right: calc(950px + ((100% - 948px) / 2));
    top: 50px;
    transform: translate(50%, 0%);
  }
}

